<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.Controller.LoginActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginEmailText" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/email" android:textSize="20sp"
            android:textColorHighlight="@color/colorPrimary"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPasswordText" app:layout_constraintEnd_toEndOf="@+id/loginEmailText"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailText"
            app:layout_constraintStart_toStartOf="@+id/loginEmailText" android:hint="@string/password" android:textSize="20sp"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/loginPasswordText"
            android:background="@color/colorPrimary" android:textColor="@android:color/white" android:textSize="18sp"
            android:textStyle="bold" android:onClick="loginLoginButtonClicked"/>
    <TextView
            android:text="@string/don_t_have_an_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/loginButton"
            android:textAlignment="center"/>
    <Button
            android:text="@string/sign_up_here"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signUpButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:background="@color/colorPrimary" android:textColor="@android:color/white" android:textSize="18sp"
            android:textStyle="bold" android:onClick="loginSignupButtonClicked"/>
</android.support.constraint.ConstraintLayout>